--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.8'
 
+networks:
+  flashscore-network:
+
 services:
   postgres:
     image: postgres:16-alpine
@@ -13,6 +16,27 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - flashscore-network
+
+  flashscore-matches-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: flashscore-matches-api
+    restart: always
+    ports:
+      - "8080:8080"
+    environment:
+      PORT: 8080
+      DATABASE_URI: jdbc:postgresql://postgres:5432/matches-db
+      USER: user
+      PASSWORD: password
+    depends_on:
+      - postgres
+    networks:
+      - flashscore-network
 
 volumes:
   postgres-data:
+
