--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 			<version>2.2.0</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
